--- a/targets.html
+++ b/targets.html
@@ -13,3 +13,21 @@
     height:50%;
     padding-left:5px 5px;
           }
+          .text {
+font-size: 30px;
+      } 
+.column {
+float: right;
+width: 10px;
+height:10px;
+	    
+      }
+      h1 { 
+  font-family: sans-serif;
+  display: block;
+  font-size: 3em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  font-weight: bold;
+  text-align: center;
+  }
