--- a/Image.html
+++ b/Image.html
@@ -14,19 +14,21 @@
 					margin-top:0%;
 					top:-3%;
 					object-fit:fill;
+					background-size:cover;
 				}
 	#text{
-		position:relative;
-		color:Green;
-		text-align:center;
-		font-size:98px;
-		font-family:cooper black;
-		 margin: 30px;
-		background-color: #ffffff;
-		border: 1px solid black;
-		opacity: 0.6;
-		padding:0%;
-		margin-top:-30%;
+		 background-color:gray;
+  font-size: 10vw; 
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 10px;
+  width: 90%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: screen;
 		}
 	#content{
 			position:absolute;
@@ -59,6 +61,28 @@
 	body{
 			background-color:forestgreen;
 		}
+		#list{
+			font-size:18px;
+			margin-top:17%;
+			liststyletype:none;
+			background-color:#008B8B;
+			width:1550px;
+			display:block;
+			font-family:Calibri;
+			margin-left:-15%;
+			}
+	li a:hover {
+  background-color: #555;
+  color: white;
+  }
+  li a{
+		text-decoration:none;
+		color:white;
+	}
+	ul li:before {
+  content: '\2714\0020';
+  color:white;
+}
 </style>
 </head>
 <body>
@@ -71,5 +95,14 @@
 	<div>
 		<h1 id="text">15<br> Life on Land</h1>
 </div>
+<div id="list">
+		<ul style="list-style-type:none">
+                                <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="#">About us</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="#">Targets</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
+                            </ul>
+	</div>
 </body>
 </html>
