--- a/targets.html
+++ b/targets.html
@@ -13,21 +13,28 @@
     height:50%;
     padding-left:5px 5px;
           }
-          .text {
-font-size: 30px;
+    .text {
+    font-size: 30px;
       } 
-.column {
-float: right;
-width: 10px;
-height:10px;
+    .column {
+    float: right;
+    width: 10px;
+    height:10px;
 	    
       }
       h1 { 
-  font-family: sans-serif;
-  display: block;
-  font-size: 3em;
-  margin-top: 0.67em;
-  margin-bottom: 0.67em;
-  font-weight: bold;
-  text-align: center;
-  }
+     font-family: sans-serif;
+     display: block;
+     font-size: 3em;
+     margin-top: 0.67em;
+     margin-bottom: 0.67em;
+     font-weight: bold;
+     text-align: center;
+     }
+     div.gallery {
+     padding: 10px;
+     margin: 20px;
+     border: 3px solid lightseagreen; 
+     float: left; 
+     width: 20%;
+     }
