--- a/desc.html
+++ b/desc.html
@@ -11,3 +11,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
+body {font-family: Arial, Helvetica, sans-serif;}
+
+.image-container {
+  background-image: url("forest.jpg");
+  background-size: cover;
+  position: relative;
+  width: 100%;
+  height: 400px;
+
+}
