--- a/desc.html
+++ b/desc.html
@@ -21,3 +21,17 @@ body {font-family: Arial, Helvetica, sans-serif;}
   height: 400px;
 
 }
+.text {
+  background-color:gray;
+  font-size: 10vw; 
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 10px;
+  width: 90%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: screen;
+}
