--- a/targets.html
+++ b/targets.html
@@ -38,3 +38,11 @@
      float: left; 
      width: 20%;
      }
+     div.gallery:hover {
+     border: 3px solid forestgreen;
+     }
+
+     div.gallery img {
+     width: 100%;
+     height: auto;
+     }
