--- a/desc.html
+++ b/desc.html
@@ -35,3 +35,18 @@ body {font-family: Arial, Helvetica, sans-serif;}
   transform: translate(-50%, -50%);
   mix-blend-mode: screen;
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+
+  background: #f1f1f1; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
