--- a/targets.html
+++ b/targets.html
@@ -46,6 +46,54 @@
      width: 100%;
      height: auto;
      }
+     /*************************related goals******************/
+
+#cards_landscape_wrap-2{
+  text-align: center;
+  background: #F7F7F7;
+  
+}
+#cards_landscape_wrap-2 .container{ 
+  width: 100%;
+  padding: 50px;
+  margin: 50px;
+}
+#cards_landscape_wrap-2 .container .row .box{
+  float: left;
+  width: 20%;
+  padding: 10px;
+} 
+#cards_landscape_wrap-2 a{
+  text-decoration: none;
+  outline: none; 
+}
+#cards_landscape_wrap-2 .card-flyer {
+  border-radius: 5px;
+  
+}
+
+#cards_landscape_wrap-2 .card-flyer .image-box{
+  background: #ffffff;
+  overflow: hidden;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.50);
+  border-radius: 5px;
+  
+}
+#cards_landscape_wrap-2 .card-flyer .image-box img{
+  -webkit-transition:all .9s ease; 
+  -moz-transition:all .9s ease; 
+  -o-transition:all .9s ease;
+  -ms-transition:all .9s ease; 
+  width:100%;
+}
+#cards_landscape_wrap-2 .card-flyer:hover .image-box img{
+  opacity: 0.7;
+  -webkit-transform:scale(1.15);
+  -moz-transform:scale(1.15);
+  -ms-transform:scale(1.15);
+  -o-transform:scale(1.15);
+  transform:scale(1.15);
+}
      </style>
      <body>
        
