--- a/aboutus.html
+++ b/aboutus.html
@@ -52,6 +52,32 @@ html {
   clear: both;
   display: table;
 }
+.title {
+  color: grey;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.button:hover {
+  background-color: #555;
+}
+
+@media screen and (max-width: 650px) {
+  .column {
+    width:20;
+    display:lock;
+  }
+}
 </style>
 </head>
 <body>
