--- a/Image.html
+++ b/Image.html
@@ -8,8 +8,8 @@
 			border:0%;
 			}
 	div.image img{
-					width:100%;
-					height:88%;
+					min-width:100%;
+					min-height:88%;
 					position:relative;
 					margin-top:0%;
 					top:-3%;
@@ -21,19 +21,20 @@
   font-size: 10vw; 
   font-weight: bold;
   margin: 0 auto;
+  margin-top:-20%;
   padding: 10px;
-  width: 90%;
+  min-width: 90%;
   text-align: center;
   position: absolute;
-  top: 50%;
+  min-top:-20%;
   left: 50%;
   transform: translate(-50%, -50%);
   mix-blend-mode: screen;
 		}
 	#content{
 			position:absolute;
-			width:100%;
-			height:30%;
+			min-width:100%;
+			min-height:30%;
 			color:navy;
 			z-index:-1;
 			margin-top:40%;
@@ -41,6 +42,7 @@
 			border:2px solid white;
 			opacity:0.5;
 			padding:0%;
+			padding-bottom:10%;
 			margin-bottom:-2%;
 			}
 	#content h2{
@@ -66,10 +68,14 @@
 			margin-top:17%;
 			liststyletype:none;
 			background-color:#008B8B;
-			width:1550px;
+			min-width:1550px;
 			display:block;
 			font-family:Calibri;
-			margin-left:-15%;
+			margin-left:-10%;
+			min-top:60%;
+			position:absolute;
+			min-bottom:-70%;
+			display:flex;
 			}
 	li a:hover {
   background-color: #555;
@@ -99,7 +105,7 @@
 		<ul style="list-style-type:none">
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="#">About us</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">Targets</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
                             </ul>
