added div parts to body

--- a/desc.html
+++ b/desc.html
@@ -162,6 +162,20 @@ img {vertical-align: middle;}
 }
 </style>
 </head>
+<div class="image-container">
+  <div class="text">LIFE ON LAND</div>
+</div>
+
+<br/>
+<div style="margin-left:200px;margin-right:200px;font-family:serif;font-style:bold;font-size:20px">
+<blockquote>
+<p>Forests cover 30.7 per cent of the Earth’s surface and,in addition to providing food security and shelter,they are key to combating climate change, protecting biodiversity and the homes of the indigenous population.By protecting forests, we will also be able to strengthen natural resource management and increase land productivity.</p><br/>
+
+<p>At the current time, thirteen million hectares of forests are being lost every year while the persistent degradation of drylands has led to the desertification of 3.6 billion hectares. Even though up to 15% of land is currently under protection, biodiversity is still at risk. Deforestation and desertification – caused by human activities and climate change – pose major challenges to sustainable development and have affected the lives and livelihoods of millions of people in the fight against poverty.</p><br/>
+
+<p>Efforts are being made to manage forests and combat desertification. There are two international agreements being implemented currently that promote the use of resources in an equitable way. Financial investments in support of biodiversity are also being provided.</p>
+</blockquote>
+</div>
 <body>
 
 
