--- a/targets.html
+++ b/targets.html
@@ -94,7 +94,64 @@
   -o-transform:scale(1.15);
   transform:scale(1.15);
 }
+#cards_landscape_wrap-2 .card-flyer .text-box{
+  text-align: center;
+  height:100%;
+  width:100%;
+}
+#cards_landscape_wrap-2 .card-flyer .text-box .text-container{
+  padding: 10px 10px;
+  height:100%;
+  width:100%;
+}
+#cards_landscape_wrap-2 .card-flyer{
+  background: #FFFFFF;
+  padding: 1px;
+  margin-top: 10px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.40);
+}
+#cards_landscape_wrap-2 .card-flyer:hover{
+  background: #fff;
+  box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.50);
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  margin-top: 5px;
+}
+#cards_landscape_wrap-2 .card-flyer .text-box p{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 0px 5px; 
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #000000;
+}
+#cards_landscape_wrap-2 .card-flyer .text-box h6{
+  margin-top: 0px;
+  margin-bottom: 4px; 
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: 'Roboto Black', sans-serif;
+  letter-spacing: 1px;
+  color: #00acc1;
+}
+ .hr1 {
+        border: 0;
+        height: 3px;
+		width:100%;
+        background: #095484;
+        background-image: linear-gradient(to right, #ccc, #095484, #ccc);
+      }
      </style>
+     </head>
      <body>
        
 
