--- a/targets.html
+++ b/targets.html
@@ -153,6 +153,15 @@
      </style>
      </head>
      <body>
+      <div class="container">
+        <div class="image">
+          <img src="SDG-15.png" alt="sdg15" width="30%" height="25%">
+        </div>
+        <div class="text">
+        <div style="font-style:bold;background-color:darkcyan;text-align:center;color: white;">
+          <h1>Targets of life on land</h1>
+      </div>
+        </div>
        
 
      </body>
