--- a/page2.html
+++ b/page2.html
@@ -3,8 +3,8 @@
 <style>
 	#head{
 			font-size:98px;
-			color:yellow;
-			margin-bottom:20%;
+			text-color:linear-gradient(yellow,red);
+			margin-bottom:5%;
 			text-decoration:underline;
 		}
 	#content{
@@ -13,30 +13,33 @@
 			margin-right:5%;
 			}
 	#division{
-				background-color:forestgreen;
-				margin-right:50%;
-				height:1000px;
+				background-image:linear-gradient(green, yellow);
+				height:1300px;
 				position:relative;
 				margin-top:-1%;
 				margin-bottom:-3%;
-				clear:right;
+				clear:both;
+				float:left;
 			}
 	img{
-			float:right;
-			margin-top:-70%;
-			width:52%;
+			width:100%;
 			position:relative;
-			height:1088px;
+			height:500px;
 			margin-right:-1%;
+			clear:both;
+			margin-top:-3%;
 		}
 	#list{
 			font-size:18px;
-			margin-top:55%;
+			margin-top:23.5%;
 			liststyletype:none;
 			background-color:#008B8B;
 			width:1510px;
 			display:block;
 			font-family:Calibri;
+			height:18%;
+			float:left;
+			margin-bottom:-3%;
 			}
 	li a:hover {
   background-color: #555;
@@ -50,12 +53,46 @@
   content: '\2714\0020';
   color:white;
 }
+#img2{
+		margin-top:60%;
+		height:1000px;
+		margin-bottom:-3%;
+		
+		}
+div.pic2{
+			position:absolute;
+			padding-top:50%;
+			height:70%;
+			width:30%;
+			align:center;
+			opacity:0.3;
+			padding-left:30%;
+		}
 </style>
 </head>
 <body>
+<div class="pic1">
+<img src="zebra.jpeg" alt="zebra"/>
+</div>
 	<div id="division">
 		<h1 id="head">What is it?</h1>
-		<p id="content">Forests are crucial to global sustainable development, affecting both the natural environment and economic prosperity. They are home to 80% of the world terrestrial specific, provide clean water, prevent soil erosion and flood, and can provide one third of carbon mitigation efforts needs to hold temperature rise below 2<sup>o</sup>C. Some 1.6 billion people depend on forests for sustenance, duel and medicinal plants, while 10 million people are employed in the forestry sector worldwide.</p>
+		<p id="content">Forests are crucial to global sustainable development, affecting both the natural environment and economic prosperity. They are home to 80% of the world terrestrial specific, provide clean water, prevent soil erosion and flood, and can provide one third of carbon mitigation efforts needs to hold temperature rise below 2<sup>o</sup>C. Some 1.6 billion people depend on forests for sustenance, duel and medicinal plants, while 10 million people are employed in the forestry sector worldwide. 
+		 Environmental conservation has an impact on every level of life on the planet, from human beings to animals and plants. 
+
+Because of this, it’s an essential part of sustainable development, which is why GVI makes marine and wildlife conservation a key focus in all our programs.
+
+Safeguarding the world’s forests can assist in addressing climate change and slow the extinction rate of a whole host of plant and animal species. It also promotes the welfare of human beings in myriad ways. 
+
+Currently, forest resources provide around two billion people with their livelihoods by generating food and income. But, when these resources aren’t used in a sustainable way, they deplete faster than they can be restored, thus reducing the access that future generations have to these resources. 
+
+Today, deforestation is happening at a rapid rate. Around ten million hectares of forest area are lost each year. This is one way environmental degradation significantly impacts global development.
+
+The United Nations Sustainable Development Goal (UN SDG) 15: Life on Land emphasises the importance of addressing land degradation and biodiversity loss on a local and global scale. 
+
+Adding to the conservation of forests and wildlife can also contribute to the economic development of communities around the world, and improve the quality of life for the global community.
+
+GVI incorporates wildlife conservation into targeted volunteer programs. By getting involved in a wildlife conservation volunteer program, you’ll be adding to UN SDG 15: Life on Land – as well as the 16 other UN SDGs – and be part of global conservation efforts. 
+		 </p>
 	<div id="list">
 		<ul style="list-style-type:none">
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
@@ -66,7 +103,8 @@
                             </ul>
 	</div>
 	</div>
-	<img src="zebra.jpeg" alt="zebra"/>
-	
+	<div class="pic2">
+		<img src="Green.jpeg" alt="rat"/>
+	</div>
 </body>
 </html>
