--- a/aboutus.html
+++ b/aboutus.html
@@ -78,6 +78,26 @@ html {
     display:lock;
   }
 }
+<body>
+</style>
+</head>
+
+<div class="about-section">
+
+<div class="h2">
+
+  <h1>LIFE ON LAND</h1>
+  </div>
+  <div class="h1">
+  <p><quotes>Protect, restore and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification, and halt and reverse land degradation and halt biodiversity loss.</quotes></p>
+  </div>
+  <div class="p">
+  <p>Resize the browser window to see that this page is responsive by the way.</p>
+</div>
+
+
+</div>
+
 </style>
 </head>
 <body>
