--- a/aboutus.html
+++ b/aboutus.html
@@ -113,6 +113,19 @@ html {
     </div>
   </div>
 
+  <div class="column">
+    <div class="card">
+      <img src="cd.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Mike Ross</h2>
+        <p class="title">Art Director</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>mike@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+  
 </style>
 </head>
 <body>
