--- a/aboutus.html
+++ b/aboutus.html
@@ -126,6 +126,18 @@ html {
     </div>
   </div>
   
+  <div class="column">
+    <div class="card">
+      <img src="5.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>John Doe</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>john@example.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
 </style>
 </head>
 <body>
