--- a/targets.html
+++ b/targets.html
@@ -230,7 +230,7 @@
           <a target="_blank" href="#">
             <img src="12.png" alt="15-c" width="100%" height="100%">
           </a>
-        </div>S
+        </div>
 
      </body>
      </head>
