added horizontal line

--- a/targets.html
+++ b/targets.html
@@ -231,7 +231,12 @@
             <img src="12.png" alt="15-c" width="100%" height="100%">
           </a>
         </div>
-
+        <hr class="hr1" />
+        <div class="text">
+              <div style="font-style:bold;background-color:darkcyan;text-align:center;color: white;">
+                <h1>Related Goals</h1>
+            </div>
+              </div>
+            
      </body>
-     </head>
      </html>
