--- a/page2.html
+++ b/page2.html
@@ -31,7 +31,7 @@
 		}
 	#list{
 			font-size:18px;
-			margin-top:23.5%;
+			margin-top:-1%;
 			liststyletype:none;
 			background-color:#008B8B;
 			width:1510px;
@@ -77,21 +77,21 @@ div.pic2{
 	<div id="division">
 		<h1 id="head">What is it?</h1>
 		<p id="content">Forests are crucial to global sustainable development, affecting both the natural environment and economic prosperity. They are home to 80% of the world terrestrial specific, provide clean water, prevent soil erosion and flood, and can provide one third of carbon mitigation efforts needs to hold temperature rise below 2<sup>o</sup>C. Some 1.6 billion people depend on forests for sustenance, duel and medicinal plants, while 10 million people are employed in the forestry sector worldwide. 
-		 Environmental conservation has an impact on every level of life on the planet, from human beings to animals and plants. 
+		 Environmental conservation has an impact on every level of life on the planet, from human beings to animals and plants.<br> <br> 
 
-Because of this, it’s an essential part of sustainable development, which is why GVI makes marine and wildlife conservation a key focus in all our programs.
+Because of this, it’s an essential part of sustainable development, which is why GVI makes marine and wildlife conservation a key focus in all our programs.<br> <br> 
 
-Safeguarding the world’s forests can assist in addressing climate change and slow the extinction rate of a whole host of plant and animal species. It also promotes the welfare of human beings in myriad ways. 
+Safeguarding the world’s forests can assist in addressing climate change and slow the extinction rate of a whole host of plant and animal species. It also promotes the welfare of human beings in myriad ways.<br>  <br> 
 
-Currently, forest resources provide around two billion people with their livelihoods by generating food and income. But, when these resources aren’t used in a sustainable way, they deplete faster than they can be restored, thus reducing the access that future generations have to these resources. 
+Currently, forest resources provide around two billion people with their livelihoods by generating food and income. But, when these resources aren’t used in a sustainable way, they deplete faster than they can be restored, thus reducing the access that future generations have to these resources.<br><br>   
 
-Today, deforestation is happening at a rapid rate. Around ten million hectares of forest area are lost each year. This is one way environmental degradation significantly impacts global development.
+Today, deforestation is happening at a rapid rate. Around ten million hectares of forest area are lost each year. This is one way environmental degradation significantly impacts global development.<br> <br> 
 
-The United Nations Sustainable Development Goal (UN SDG) 15: Life on Land emphasises the importance of addressing land degradation and biodiversity loss on a local and global scale. 
+The United Nations Sustainable Development Goal (UN SDG) 15: Life on Land emphasises the importance of addressing land degradation and biodiversity loss on a local and global scale. <br> <br> 
 
-Adding to the conservation of forests and wildlife can also contribute to the economic development of communities around the world, and improve the quality of life for the global community.
+Adding to the conservation of forests and wildlife can also contribute to the economic development of communities around the world, and improve the quality of life for the global community.<br><br>  
 
-GVI incorporates wildlife conservation into targeted volunteer programs. By getting involved in a wildlife conservation volunteer program, you’ll be adding to UN SDG 15: Life on Land – as well as the 16 other UN SDGs – and be part of global conservation efforts. 
+GVI incorporates wildlife conservation into targeted volunteer programs. By getting involved in a wildlife conservation volunteer program, you’ll be adding to UN SDG 15: Life on Land – as well as the 16 other UN SDGs – and be part of global conservation efforts.<br> <br> 
 		 </p>
 	<div id="list">
 		<ul style="list-style-type:none">
