--- a/page2.html
+++ b/page2.html
@@ -72,7 +72,7 @@ div.pic2{
 </head>
 <body>
 <div class="pic1">
-<img src="zebra.jpeg" alt="zebra"/>
+<img src="forest.jpg" alt="zebra"/>
 </div>
 	<div id="division">
 		<h1 id="head">What is it?</h1>
@@ -104,7 +104,7 @@ GVI incorporates wildlife conservation into targeted volunteer programs. By gett
 	</div>
 	</div>
 	<div class="pic2">
-		<img src="Green.jpeg" alt="rat"/>
+		<img src="zebra.jpeg" alt="rat"/>
 	</div>
 </body>
 </html>
