added card flyer

--- a/targets.html
+++ b/targets.html
@@ -237,6 +237,43 @@
                 <h1>Related Goals</h1>
             </div>
               </div>
+              <div id="cards_landscape_wrap-2">
+                <div class="container">
+                    <div class="row">
+                        <div class="box">
+                            <a href="">
+                                <div class="card-flyer">
+                                    <div class="text-box">
+                                        <div class="image-box">
+                                            <img src="zero hunger.jpg" alt="zero hunger" />
+                                        </div>
+                                        <div class="text-container">
+                            <br/>
+                                            <h6>Zero Hunger</h6>
+                                            <br/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="box">
+                            <a href="">
+                                <div class="card-flyer">
+                                    <div class="text-box">
+                                        <div class="image-box">
+                                            <img src="climate change.jpg" alt="climate change" />
+                                        </div>
+                                        <div class="text-container">
+                                            <br/>								
+                                            <h6>Climate Action</h6>
+                                            <br/>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+
+
             
      </body>
      </html>
