--- a/desc.html
+++ b/desc.html
@@ -162,6 +162,7 @@ img {vertical-align: middle;}
 }
 </style>
 </head>
+<body>
 <div class="image-container">
   <div class="text">LIFE ON LAND</div>
 </div>
@@ -176,7 +177,12 @@ img {vertical-align: middle;}
 <p>Efforts are being made to manage forests and combat desertification. There are two international agreements being implemented currently that promote the use of resources in an equitable way. Financial investments in support of biodiversity are also being provided.</p>
 </blockquote>
 </div>
-<body>
+
+<div style="margin-left:200px;margin-right:200px;font-family:cursive;font-style:bold;background-color: green;
+  color: white;">
+<h2>A flourishing life on land is the foundation for our life on this planet.We are all part of the planet’s ecosystem and we have caused severe damage to it through deforestation, loss of natural habitats and land degradation. Promoting a sustainable use of our ecosystems and preserving biodiversity is not a cause. It is the key to our own survival.</h2>
+</div>
+<br/>
 
 
 </body>
