added div style for paragraph

--- a/targets.html
+++ b/targets.html
@@ -308,6 +308,19 @@
                   </div>
               </div>
           </div>
+          <div style="display: block; border: 2px outset forestgreen;
+background-color: #54c571;    
+text-align: center;"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
+<div class= "block" style="font-style:bold;
+background-repeat: no-repeat;
+background-color:#1b6673;
+text-align: justify;
+padding-top: 25px;
+text-justify: inter-word;
+text-align:center;color: white;
+font-family:'Segoe UI';
+font-size:18px">
+<div style="margin-left:200px;margin-right:200px;">
 
 
             
