--- a/aboutus.html
+++ b/aboutus.html
@@ -28,17 +28,10 @@ html {
   margin: 8px;
 }
 
-
-.h2{
-   font-family:cursive;
-}
-.p{
-   font-family:serif;
-}
 .about-section {
   padding: 50px;
   text-align: center;
-  background-color: #474e5d;
+  background-color: #1b6673;
   color: white;
   font-family:serif;
 }
@@ -53,7 +46,7 @@ html {
   display: table;
 }
 .title {
-  color: grey;
+  color: midnightblue;
 }
 
 .button {
@@ -164,10 +157,5 @@ html {
     </div>
   </div> 
 </div>
-
-</style>
-</head>
-<body>
-    
 </body>
 </html>
