--- a/aboutus.html
+++ b/aboutus.html
@@ -67,11 +67,24 @@ html {
 
 @media screen and (max-width: 650px) {
   .column {
-    width:20;
-    display:lock;
+    width:100;
+    display:block;
+  
   }
 }
-<body>
+.para{
+  color:#a8ee90;
+  font-size:20px;
+  font-family:cursive;
+
+  }
+  .para1{
+  color:gold;
+  font-size:40px;
+  font-family:time new roman;
+  }
+
+
 </style>
 </head>
 
