added and changes

--- a/desc.html
+++ b/desc.html
@@ -14,7 +14,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 .image-container {
-  background-image: url("forest.jpg");
+  background-image: url("channel.jpeg");
   background-size: cover;
   position: relative;
   width: 100%;
@@ -187,36 +187,55 @@ img {vertical-align: middle;}
 
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
-    <img src="ij.jpg" style="width:100%">
+    <img src="d.jpeg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">2 / 6</div>
-    <img src="gh.jpg" style="width:100%">
+    <img src="e.jpeg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">3 / 6</div>
-    <img src="cd.jpg" style="width:100%">
+    <img src="g.jpeg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">4/ 6</div>
-    <img src="ab.jpg" style="width:100%">
+    <img src="f.jpeg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">5/ 5</div>
-    <img src="3.jpg" style="width:100%">
+    <img src="w.jpg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">5/ 5</div>
-    <img src="7.jpg" style="width:100%">
+    <img src="a.jpeg" style="width:100%">
+
+  <div class="mySlides fade">
+      <div class="numbertext">7/8</div>
+      <img src="b.jpeg" style="width:100%">
+    </div>
+    
+  <div class="mySlides fade">
+      <div class="numbertext">8/ 8</div>
+      <img src="c.jpeg" style="width:100%">
+    </div>
   </div>
   </div>
   <br>
-
+  <div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span>  
+    <span class="dot"></span>
+    <span class="dot"></span>  
+    <span class="dot"></span>   
+  </div>
 
 
 </body>
