--- a/desc.html
+++ b/desc.html
@@ -257,6 +257,39 @@ img {vertical-align: middle;}
       setTimeout(showSlides, 2000); // Change image every 2 seconds
     }
     </script>
+    <footer>
+      <div class="col-lg-2 col-sm-6 footer-menus">
+        <h4>More</h4>
+          <ul>
+              <li><i class="fas fa-check"></i> <a href="#">Home</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">About us</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">Targets</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li>
+              <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
+          </ul>
+      </div>
+
+          <div class="social-links mt-3">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="#"><i class="fab fa-pinterest-p"></i></a>
+          </div>
+      </div>
+  </div>
+</div>
+</div>
+
+<div class="footer-bottom">
+<div class="container">
+  <div class="row">
+      <div class="col-12">
+          <p class="text-center mb-2">&copy; Copyright <strong>Life on land</strong>. All Rights Reserved</p>       
+  </div>
+</div>
+</div>
+</footer>
 
 </body>
 </html>
