add path to image

--- a/desc.html
+++ b/desc.html
@@ -187,7 +187,7 @@ img {vertical-align: middle;}
 
   <div class="mySlides fade">
     <div class="numbertext">1 / 6</div>
-    <img src="d.jpeg" style="width:100%">
+    <img src="img/d.jpeg" style="width:100%">
   </div>
   
   <div class="mySlides fade">
