added path to image

--- a/targets.html
+++ b/targets.html
@@ -155,7 +155,7 @@
      <body>
       <div class="container">
         <div class="image">
-          <img src="SDG-15.png" alt="sdg15" width="30%" height="25%">
+          <img src="img/SDG-15.png" alt="sdg15" width="30%" height="25%">
         </div>
         <div class="text">
         <div style="font-style:bold;background-color:darkcyan;text-align:center;color: white;">
@@ -164,13 +164,13 @@
         </div>
         <div class="gallery">
           <a target="_blank" href="#"> 
-            <img src="1.png" alt="15-1" width="100%" height="100%">
+            <img src="img/1.png" alt="15-1" width="100%" height="100%">
           </a>
         </div>
         
         <div class="gallery">
           <a target="_blank" href="#"> 
-            <img src="2.png" alt="15-2" width="100%" height="100%">
+            <img src="img/2.png" alt="15-2" width="100%" height="100%">
           </a>
         </div>
         
