--- a/Image.html
+++ b/Image.html
@@ -44,6 +44,7 @@
 			padding:0%;
 			padding-bottom:10%;
 			margin-bottom:-2%;
+			clear:both;
 			}
 	#content h2{
 				font-size:45px;
@@ -68,7 +69,7 @@
 			margin-top:17%;
 			liststyletype:none;
 			background-color:#008B8B;
-			min-width:1550px;
+			min-width:100%;
 			display:block;
 			font-family:Calibri;
 			margin-left:-10%;
@@ -76,6 +77,7 @@
 			position:absolute;
 			min-bottom:-70%;
 			display:flex;
+			min-height:30%;
 			}
 	li a:hover {
   background-color: #555;
@@ -106,8 +108,7 @@
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="#">About us</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
+                                <li><i class="fas fa-check"></i> <a href="#">Solution</a></li><br>
                             </ul>
 	</div>
 </body>
