--- a/page2.html
+++ b/page2.html
@@ -3,14 +3,15 @@
 <style>
 	#head{
 			font-size:98px;
-			text-color:linear-gradient(yellow,red);
+			color:linear-gradient(white, black);
 			margin-bottom:5%;
-			text-decoration:underline;
+			text-decoration:none;
 		}
 	#content{
 			font-size:30px;
 			color:white;
 			margin-right:5%;
+			margin-left:0%;
 			}
 	#division{
 				background-image:linear-gradient(green, yellow);
@@ -25,7 +26,7 @@
 			width:100%;
 			position:relative;
 			height:500px;
-			margin-right:-1%;
+			margin-right:0%;
 			clear:both;
 			margin-top:-3%;
 		}
@@ -56,7 +57,9 @@
 #img2{
 		margin-top:60%;
 		height:1000px;
+		width:1000px;
 		margin-bottom:-3%;
+		opacity:200%;
 		
 		}
 div.pic2{
@@ -72,10 +75,10 @@ div.pic2{
 </head>
 <body>
 <div class="pic1">
-<img src="forest.jpg" alt="zebra"/>
+<img src="4.gif" alt="forest"/>
 </div>
 	<div id="division">
-		<h1 id="head">What is it?</h1>
+		<h1 id="head">About Life on Land</h1>
 		<p id="content">Forests are crucial to global sustainable development, affecting both the natural environment and economic prosperity. They are home to 80% of the world terrestrial specific, provide clean water, prevent soil erosion and flood, and can provide one third of carbon mitigation efforts needs to hold temperature rise below 2<sup>o</sup>C. Some 1.6 billion people depend on forests for sustenance, duel and medicinal plants, while 10 million people are employed in the forestry sector worldwide. 
 		 Environmental conservation has an impact on every level of life on the planet, from human beings to animals and plants.<br> <br> 
 
@@ -98,13 +101,12 @@ GVI incorporates wildlife conservation into targeted volunteer programs. By gett
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="#">About us</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">Terms of service</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">Privacy policy</a></li>
+                                <li><i class="fas fa-check"></i> <a href="#">Solutions</a></li><br>
                             </ul>
 	</div>
 	</div>
 	<div class="pic2">
-		<img src="zebra.jpeg" alt="rat"/>
+		<img src="1.gif" alt="zebra"/>
 	</div>
 </body>
 </html>
