--- a/Image.html
+++ b/Image.html
@@ -106,7 +106,7 @@
 <div id="list">
 		<ul style="list-style-type:none">
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">About us</a></li><br>
+                                <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html">About us</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
                                 <li><i class="fas fa-check"></i> <a href="#">Solution</a></li><br>
                             </ul>
