--- a/Image.html
+++ b/Image.html
@@ -55,7 +55,7 @@
 				margin-left:20%;
 				}
 	#content p{
-				font-size:26px;
+				font-size:22px;
 				margin-top:1%;
 				margin-left:5%;
 				margin-right:5%;
@@ -96,7 +96,7 @@
 <body>
 <div id="content">
 	<h2>Definition</h2>	
-	<p>Human life depends on the earth as much as the ocean for our sustenance and livelihoods. Plant life provides 80 percent of the human diet, and we rely on agriculture as an important economic resources. Forests cover 30 percent of the Earth’s surface, provide vital habitats for millions of species, and important sources for clean air and water, as well as being crucial for combating climate change.</p>
+	<p>Protect, restore and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification, and halt and reverse land degradation and halt biodiversity loss.<br>Human life depends on the earth as much as the ocean for our sustenance and livelihoods. Plant life provides 80 percent of the human diet, and we rely on agriculture as an important economic resources. Forests cover 30 percent of the Earth’s surface, provide vital habitats for millions of species, and important sources for clean air and water, as well as being crucial for combating climate change.</p>
 </div>
 <div class="image">
 		<img src="cheetah.gif" alt="15"/>
@@ -105,10 +105,10 @@
 </div>
 <div id="list">
 		<ul style="list-style-type:none">
-                                <li><i class="fas fa-check"></i> <a href="file:///D:/Image.html#">Home</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html">About us</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
-                                <li><i class="fas fa-check"></i> <a href="#">Solution</a></li><br>
+                                <li class="fas fa-check"><a href="file:///D:/Image.html#">Home</a></li><br>
+                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html">About us</a></li><br>
+                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
+                                <li class="fas fa-check"><a href="#">Solution</a></li><br>
                             </ul>
 	</div>
 </body>
