--- a/Image.html
+++ b/Image.html
@@ -105,9 +105,9 @@
 </div>
 <div id="list">
 		<ul style="list-style-type:none">
-                                <li class="fas fa-check"><a href="file:///D:/Image.html#">Home</a></li><br>
-                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html">About us</a></li><br>
-                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html">Targets</a></li><br>
+                                <li class="fas fa-check"><a href="file:///D:/Image.html#" target="blank">Home</a></li><br>
+                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/Nilupul.html" target="blank">About us</a></li><br>
+                                <li class="fas fa-check"><a href="file:///D:/1st%20year%202nd%20Semester/Web%20Development/Assignment/webass16.html" target="blank">Targets</a></li><br>
                                 <li class="fas fa-check"><a href="#">Solution</a></li><br>
                             </ul>
 	</div>
