--- a/page2.html
+++ b/page2.html
@@ -3,18 +3,22 @@
 <style>
 	#head{
 			font-size:98px;
-			color:linear-gradient(white, black);
+		    background-image: linear-gradient( 115.3deg,  rgba(67,202,177,1) 7.4%, rgba(255,255,255,1) 103.1% );;
 			margin-bottom:5%;
 			text-decoration:none;
+			font-family:verdana;
+			transition:width 2s;		
 		}
+	
 	#content{
 			font-size:30px;
 			color:white;
 			margin-right:5%;
 			margin-left:0%;
+			font-family:sans-serif;
 			}
 	#division{
-				background-image:linear-gradient(green, yellow);
+				background-image: linear-gradient( 179.1deg,  rgba(43,170,96,1) 2.3%, rgba(129,204,104,1) 98.3% );
 				height:1300px;
 				position:relative;
 				margin-top:-1%;
