--- a/Image.html
+++ b/Image.html
@@ -50,7 +50,7 @@
 				font-size:45px;
 				margin-bottom:0%;
 				text-decoration:underline;
-				font-family:Georgia;
+				font-family:Serif;
 				color:navy;
 				margin-left:20%;
 				}
@@ -59,6 +59,7 @@
 				margin-top:1%;
 				margin-left:5%;
 				margin-right:5%;
+				font-family:cursive;
 			}
 	
 	body{
