--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <style>
 	#head{
 			font-size:98px;
-		    background-image: linear-gradient( 115.3deg,  rgba(67,202,177,1) 7.4%, rgba(255,255,255,1) 103.1% );;
+		    background-image: linear-gradient( 109.6deg,  rgba(96,221,142,1) 11.2%, rgba(24,138,141,1) 91.1% );
 			margin-bottom:5%;
 			text-decoration:none;
 			font-family:verdana;
@@ -18,7 +18,7 @@
 			font-family:sans-serif;
 			}
 	#division{
-				background-image: linear-gradient( 179.1deg,  rgba(43,170,96,1) 2.3%, rgba(129,204,104,1) 98.3% );
+				background-image: linear-gradient( 109.6deg,  rgba(96,221,142,1) 11.2%, rgba(24,138,141,1) 91.1% );
 				height:1300px;
 				position:relative;
 				margin-top:-1%;
@@ -36,7 +36,7 @@
 		}
 	#list{
 			font-size:18px;
-			margin-top:-1%;
+			margin-top:-2%;
 			liststyletype:none;
 			background-color:#008B8B;
 			width:1510px;
@@ -94,7 +94,7 @@ Currently, forest resources provide around two billion people with their livelih
 
 Today, deforestation is happening at a rapid rate. Around ten million hectares of forest area are lost each year. This is one way environmental degradation significantly impacts global development.<br> <br> 
 
-The United Nations Sustainable Development Goal (UN SDG) 15: Life on Land emphasises the importance of addressing land degradation and biodiversity loss on a local and global scale. <br> <br> 
+<a href="https://www1.undp.org/content/seoul_policy_center/en/home/sustainable-development-goals/goal-15-life-on-land.html?utm_source=EN&utm_medium=GSR&utm_content=US_UNDP_PaidSearch_Brand_English&utm_campaign=CENTRAL&c_src=CENTRAL&c_src2=GSR&gclid=Cj0KCQiA09eQBhCxARIsAAYRiylPkmf7HGjT0uUq2jAsY1CzNKQGv1iVEmcc7kP0auguWigV8IGR_nAaAkSxEALw_wcB">The United Nations Sustainable Development Goal (UN SDG) 15</a>: Life on Land emphasises the importance of addressing land degradation and biodiversity loss on a local and global scale. <br> <br> 
 
 Adding to the conservation of forests and wildlife can also contribute to the economic development of communities around the world, and improve the quality of life for the global community.<br><br>  
 
