--- a/Image.html
+++ b/Image.html
@@ -6,6 +6,7 @@
 			z-index:1;
 			margin:-3% 10%;
 			border:0%;
+			overflow:auto;
 			}
 	div.image img{
 					min-width:100%;
@@ -16,6 +17,10 @@
 					object-fit:fill;
 					background-size:cover;
 				}
+	div.image img:hover{
+						opacity:0.7
+
+						}
 	#text{
 		 background-color:gray;
   font-size: 10vw; 
@@ -87,6 +92,7 @@
   li a{
 		text-decoration:none;
 		color:white;
+		overflow:auto;
 	}
 	ul li:before {
   content: '\2714\0020';
